[tool.poetry]
name = "messagemerger"
version = "0.1.0"
description = ""
authors = ["@Lulzx"]

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.5.0"
python-telegram-bot = "^12.8"
tinydb = "^4.1.1"
python_decouple = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
